media query for tablet

--- a/index.html
+++ b/index.html
@@ -41,26 +41,39 @@
         <div class="logo-top">
             <img src="resource/images/tnw-overlay.svg" alt="tnw overlay ">
         </div>
-        <a href="#"> LATEST </a>
-        <a href="#"> HARD FORK </a>
-        <a href="#"> PLUGGED </a>
-        <a href="#"> THE NEXT POLICE </a>
-        <a href="#"> FUNDAMENTALS </a>
-        <a href="#"> IOT LAB </a>
-        <a href="#"> WORK2030 </a>
+        <a href="#" class="remove1"> LATEST </a>
+        <a href="#" class="remove1"> HARD FORK </a>
+        <a href="#" class="remove1"> PLUGGED </a>
+        <a href="#" class="remove1"> THE NEXT POLICE </a>
+        <a href="#" class="remove1"> FUNDAMENTALS </a>
+        <a href="#" class="remove1"> IOT LAB </a>
+        <a href="#" class="remove1"> WORK2030 </a>
         <div class="search-icon">
             <a href="#"> <img src="resource/images/search-2-16.png" alt="the search icon"></a>
-
+        </div>
+        <div class="show-menu">
+            <a href="#"><img class="hide-menu" src="resource/images/menu-4-16.png" alt="menu icon"></a>
         </div>
 
         <div class="nav-2-right">
             <a href="#"> <img src="resource/images/search-2-16.png" alt="the search icon"></a>
             <img id="logo1" src="resource/images/conf-ams17-logo-red.svg" alt=" TNW logo">
-            <a href="#"><img class="hide-menu" src="resource/images/menu-4-16.png" alt="menu icon"></a>
             <span> IS HAPPENING NOW!</span>
             <button type="button" name="button"> WATCH IT LIVE!</button>
         </div>
     </div>
+    <div class="second-menu">
+        <div class="logo-top1">
+            <img src="resource/images/tnw-overlay.svg" alt="tnw overlay ">
+        </div>
+        <div class="search-icon1">
+
+            <a href="#"> <img src="resource/images/search-2-24.png" alt="the search icon"></a>
+
+            <a href="#"><img class="hide-menu" src="resource/images/menu-4-24.png" alt="menu icon"></a>
+        </div>
+    </div>
+
     <div class="nav-3">
         <p> TNW Conference starts NOW! Tune in to the livestream to watch → </p>
     </div>
