Ipad layout changes added

--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@
             </div>
             <div class="section-c-2">
                 <div class="funding-1">
-                    <img src="resource/images/funding-1.png" alt="first funding">
+                    <img class="funding-resize" src="resource/images/funding-1.png" alt="first funding">
                     <p> <img src="https://img.icons8.com/material/16/000000/price-tag.png" alt="price tag"> Venture Capital, +3
 
                     </p>
@@ -192,7 +192,7 @@
 
                 </div>
                 <div class="funding-2">
-                    <img src="resource/images/funding-2.png" alt="second funding">
+                    <img class="funding-resize" src="resource/images/funding-2.png" alt="second funding">
                     <p>
                         <img src="https://img.icons8.com/material/16/000000/price-tag.png" alt="price tag"> Biotechnology
 
@@ -206,7 +206,7 @@
 
                 </div>
                 <div class="funding-3">
-                    <img src="resource/images/funding-3.png" alt="third funding">
+                    <img class="funding-resize" src="resource/images/funding-3.png" alt="third funding">
                     <p>
                         <img src="https://img.icons8.com/material/16/000000/price-tag.png" alt="price tag"> Payments, +2
 
@@ -219,7 +219,7 @@
 
                 </div>
                 <div class="funding-4">
-                    <img src="resource/images/funding-4.png" alt="fourth funding">
+                    <img class="funding-resize" src="resource/images/funding-4.png" alt="fourth funding">
                     <p>
                         <img src="https://img.icons8.com/material/16/000000/price-tag.png" alt="price tag"> Mobile Health
 
